src/qt/sss/res/css/style_dark.css
/* ... */
*[cssClass="text-list-title1"] {
    color:#5c4b7d;
    font-size:16px;
}

*[cssClass="text-list-body1-purple"] {
    color:#b088ff;
    font-size:14px;
}

*[cssClass="text-list-body1"] {
    color:#E6FFFFFF;
    font-size:16px;
}

*[cssClass="text-list-body-unconfirmed"] {
    color:#B6B6B6;
    font-size:16px;
}

*[cssClass="text-list-body2"] {
    color:#007bfe;
    font-size:15.5px;
}

*[cssClass="text-list-contact-body1"] {
    color:#007bfe;
    font-size:16px;
}


*[cssClass="text-list-body1-grey"] {
    color:#E6FFFFFF;
    font-size:16px;
}

*[cssClass="text-list-body2-grey"] {
    color:#E6FFFFFF;
    font-size:14px;
}

*[cssClass="text-list-caption"] {
    color:#B3FFFFFF;
    font-size:12px;
}

*[cssClass="text-list-caption-medium"] {
    color:#B3FFFFFF;
    font-size:14px;
}

*[cssClass="text-list-caption-medium-green"] {
    color:#008d36;
    font-size:14px;
}

*[cssClass="text-list-caption-unconfirmed"] {
    color:#B6B6B6;
}

*[cssClass="text-list-caption-grey"] {
    color:#007bfe;
    font-size:12px;
}


*[cssClass="text-list-amount-receive"] {
    color:#008d36;
    font-size:16px;
}


*[cssClass="text-list-amount-send"] {
    color:#f84444;
    font-size:16px;
}

*[cssClass="text-list-amount-unconfirmed"] {
    color:#B6B6B6;
    font-size:16px;
}


/*HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
HH       TEXT
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/

*[cssClass="text-title-screen"] {
    color:#b088ff;
    font-size:22px;
}

*[cssClass="text-title-dialog"] {
    color:#5c4b7d;
    font-size:22px;
}

*[cssClass="text-title"] {
    color:#b088ff;
    font-size:16px;
}

*[cssClass="text-title-right"] {
    color:#b088ff;
    font-size:14px;
}

*[cssClass="text-title-white"] {
    color:#007bfe;
    font-size:16px;
}

*[cssClass="text-content-white"] {
    color:#007bfe;
    font-size:16px;
}

*[cssClass="btn-title-grey"] {
    color:#007bfe;
    font-size:22px;
}

*[cssClass="btn-title-purple"] {
    color:#5c4b7d;
    font-size:22px;
}

*[cssClass="btn-subtitle-grey"] {
    color:#007bfe;
    font-size:17px;
}

*[cssClass="text-subtitle"] {
    color:#B3FFFFFF;
    font-size:14px;
}

*[cssClass="text-body2-grey"] {
    color:#707070;
    font-size:14px;
}


*[cssClass="text-body1"] {
    color:#007bfe;
    font-size:17px;
}

*[cssClass="text-body2"] {
    color:#007bfe;
    font-size:14px;
}

*[cssClass="text-main-light"] {
    color:#B3FFFFFF;
    font-size:17px;
}

*[cssClass="text-main-grey"] {
    color:#007bfe;
    font-size:17px;
}

*[cssClass="text-main-hash"] {
    color:#007bfe;
    font-size:12px;
}

*[cssClass="text-main-settings"] {
    color:#007bfe;
    font-size:18px;
}

*[cssClass="text-main-purple"] {
    color:#b088ff;
    font-size:17px;
}

*[cssClass="text-title-purple"] {
    color:#5c4b7d;
    font-size:22px;
}

*[cssClass="text-main-grey-big"] {
    color:#007bfe;
    font-size:24px;
}

/*HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
HH       BUTTONS
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/

#groupBox {
    background-color:transparent;
    border-radius:0;
}

*[cssClass="group-box"] {
    background-color:transparent;
    border-radius:0;
}

QGroupBox::title {
    color:#b088ff;
    font-size:16px;
    padding-bottom:9px;
}

QPushButton[cssClass="btn-watch-password"] {
    background: url("://ic-watch-password-white");
    background-repeat:no-repeat;
    background-position:center;
    background-color: transparent;
    border:0;
}


QPushButton[cssClass="btn-menu"] {
    qproperty-icon: url("://ic-menu-hover") off,
    url("://ic-menu-hover") on ;
    qproperty-iconSize: 24px 24px;
}

QPushButton[cssClass="btn-dropdown"] {
    qproperty-icon: url("://ic-arrow-drop-down-white") off,
    url("://ic-arrow-drop-down-white") on ;
    qproperty-iconSize: 24px 24px;
}

QPushButton[cssClass="btn-dropdown"]:checked {
    qproperty-icon: url("://ic-arrow-drop-up") off,
    url("://ic-arrow-drop-up") on ;
    qproperty-iconSize: 24px 24px;
}

QPushButton[cssClass="btn-switch"] {
    background-image: url("://ic-switch-off");
    background-position:right center;
    background-repeat:no-repeat;
    background-color:#0f0b16;
    font-size:18px;
    text-align:left;
    color: #bababa;
}

QPushButton[cssClass="btn-switch"]:checked {
    background-image: url("://ic-switch-liliac-on");
    background-position:right center;
    background-repeat:no-repeat;
    background-color:#0f0b16;
    text-align:left;
    font-size:18px;
    color: #b088ff;
}

QPushButton[cssClass="btn-check"] {
    border:  1px solid #5c4b7d;
    background-color:#0f0b16;
    padding:4px;
    font-size:18px;
    color: #707070;
    border-radius: 2px;
}

QPushButton[cssClass="btn-check"]:hover {
    border:  1px solid #5c4b7d;
    background-color:#0f0b16;
    font-size:18px;
    padding:4px;
    color: #707070;
    border-radius: 2px;
}

QPushButton[cssClass="btn-check"]:pressed {
    border:  1px solid #5c4b7d;
    background-color:#0f0b16;
    font-size:18px;
    padding:4px;
    color: #707070;
    border-radius: 2px;
}


QPushButton[cssClass="btn-check-right"] {
    border:  1px solid #5c4b7d;
    background-color:#0f0b16;
    font-size:18px;
    color: #707070;
    border-top-right-radius:2px;
    border-bottom-right-radius:2px;
}


QPushButton[cssClass="btn-check-right"]:hover {
    border:  1px solid #b088ff;
    background-color:#0f0b16;
    font-size:18px;
    color: #707070;
    border-top-right-radius:2px;
    border-bottom-right-radius:2px;
}

QPushButton[cssClass="btn-check-right"]:pressed {
    border:  1px solid #5c4b7d;
    background-color:#4Db088ff;
    font-size:18px;
    color: #707070;
    border-top-right-radius:2px;
    border-bottom-right-radius:2px;
}


QPushButton[cssClass="btn-check-right"]:checked {
    border:  1px solid #5c4b7d;
    background-color:#5c4b7d;
    font-size:18px;
    color: #161525;
    border-top-right-radius:2px;
    border-bottom-right-radius:2px;
}
/* ... */

